# statalytics

./: .env.example  .env.test  .gitignore  .gitmodules  LICENSE  LICENSE.md  README.md  commands.json  config.dev.json  config.json  dev.sh  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  flake.nix  pyproject.toml  redis.conf  requirements.txt  run_tests.py  schema.sql  shell.nix  statalytics.window.sh
.github/workflows/: ci.yml
apps/bot/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt  trackers.dockerfile  trackers.py
apps/bot/calc/: average.py  compare.py  cosmetics.py  difference.py  historical.py  milestones.py  mostplayed.py  practice.py  projection.py  quests.py  resources.py  rotational.py  session.py  total.py  winstreaks.py  year.py
apps/bot/cogs/commands/: linking.py  settings.py  skin.py  who.py
apps/bot/cogs/commands/bedwars/: average.py  compare.py  cosmetics.py  difference.py  displayname.py  general_proto.py  hotbar.py  milestones.py  mostplayed.py  practice.py  projection.py  quests.py  quickbuy.py  resources.py  sessions.py  shop.py  total.py  winstreaks.py  year.py
apps/bot/cogs/commands/bedwars/historical/: daily.py  monthly.py  weekly.py
apps/bot/cogs/commands/bedwars/leaderboards/: lb.py  lb_proto.py  live.py  update.py
apps/bot/cogs/commands/bedwars/rotational/: daily.py  monthly.py  render.py  weekly.py  yearly.py
apps/bot/cogs/commands/misc/: credits.py  help.py  info.py  invite.py  premium.py  suggest.py  usage.py  vote.py
apps/bot/cogs/events/: create_account.py  growth.py
apps/bot/cogs/misc/: error_handling.py  manage_cogs.py  management.py
apps/bot/cogs/tasks/: listings.py  metrics.py
apps/bot/helper/: __init__.py  autocomplete.py  client.py  cooldowns.py  decorators.py  emoji.py  handlers.py  interactions.py  leaderboards.py  tips.py
apps/bot/helper/embeds/: __init__.py  _embeds.py  errors.py  help.py  leaderboards.py  misc.py  premium.py  problems.py  settings.py
apps/bot/helper/views/: __init__.py  _custom.py  fractyl_modes.py  info.py  modes.py  paginate.py  premium.py  trackers.py
apps/bot/render/: average.py  compare.py  cosmetics.py  difference.py  displayname.py  historical.py  hotbar.py  leaderboards.py  milestones.py  mostplayed.py  pointless.py  practice.py  projection.py  quests.py  quickbuy.py  resources.py  rotational.py  session.py  shop.py  total.py  winstreaks.py  year.py
apps/renderer/: .gitignore  Cargo.toml  Dockerfile
apps/skins/: config.toml
apps/trackers/: Dockerfile  main.py  pyproject.toml  requirements.txt
assets/: command_map.json
assets/bg/: properties.json
assets/embeds/: 2026.json  active_theme.json  blacklisted.json  booster.json  command_cooldown.json  credits.json  errors.json  hypixel_connection_error.json  info.json  max_lookback.json  missing_permissions.json  mojang_error.json  premium.json  reset_time.json  rules.json  skin.json  status_hypixel.json  tracker_resetting.json  yearly_eligibility_check.json
bot/: Dockerfile  authenticate.py  calcpractice.py  calcprojection.py  calcsession.py  calctotal.py  config.json  custombackground.py  functions.py  keywordfinder.py  link.py  main.py  modify_db.py  prescolor.py  rendercosmetics.py  rendergraph.py  renderhotbar.py  rendermilestones.py  rendername.py  renderpractice.py  renderprojection.py  renderratio.py  renderresources.py  rendersession.py  rendershop.py  rendertotal.py  reqapi.py  requirements.txt  resetting.py  test.py  trackers.py  ui.py  uptime.json
bot/assets/: command_map.json  credits.json  help.json
bot/calc/: average.py  calcaverage.py  calccompare.py  calccosmetics.py  calcmilestones.py  calcpractice.py  calcprojection.py  calcratio.py  calcresources.py  calcsession.py  calctools.py  calctotal.py  compare.py  cosmetics.py  difference.py  historical.py  milestones.py  practice.py  projection.py  resources.py  session.py  total.py  winstreaks.py  year.py
bot/helper/: __init__.py  autocomplete.py  calctools.py  custombackground.py  errors.py  functions.py  handlers.py  historical.py  linking.py  prescolor.py  rendername.py  renderprogress.py  rendertools.py  themes.py  ui.py
bot/render/: average.py  compare.py  cosmetics.py  difference.py  displayname.py  historical.py  hotbar.py  milestones.py  mostplayed.py  pointless.py  practice.py  projection.py  quests.py  renderaverage.py  rendercompare.py  rendercosmetics.py  renderdisplayname.py  rendergraph.py  renderhotbar.py  rendermilestones.py  rendermostplayed.py  renderpractice.py  renderprojection.py  renderratio.py  renderresources.py  rendersession.py  rendershop.py  rendertotal.py  shop.py  (+6 more)
dev/: requirements.txt
statalib/: __init__.py  account_manager.py  accounts.py  aliases.py  assets.py  autocomplete.py  cfg.py  color.py  commands.py  common.py  db.py  errors.py  fmt.py  functions.py  handlers.py  historical.py  linking.py  network.py  permissions.py  requirements.txt  sessions.py  stats_snapshot.py  subscriptions.py  themes.py  usage.py
tests/: Dockerfile  utils.py
trackers/: Dockerfile  main.py  requirements.txt
(+268 files in other folders)
