[project]
name = "statalytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

# Dev dependencies
dependencies = [
    "aiohttp-client-cache==0.8.2",
    "aiosqlite==0.19.0",  # used by `aiohttp-client-cache`
    "colorlog==6.7.0",
    "discord.py==2.4.0",
    "numpy==2.2.2",
    "Pillow==11.1.0",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.0",
    "mcfetch==2.1.3",
    "paypal-checkout-serversdk==1.0.1",
    "Flask==2.3.2",
    "Flask[async]",
    "Flask-Discord==0.1.69",
    "matplotlib==3.10.0",
]

