[project]
name = "statalytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

[dependency-groups]
statalib = [
    "aiohttp-client-cache==0.8.2",
    "aiosqlite==0.19.0",
    "colorlog==6.7.0",
    "numpy==1.24.1",
    "Pillow==11.1.0",
    "python-dateutil==2.8.2",
    "mcfetch==2.1.3",
    "typing-extensions==4.14.0",
    "redis==6.4.0",
    "cachetools>=6.2.1",
    "cachetools-async>=0.0.5"
]

bot = [
    { include-group = "statalib" },
    "mcfetch==2.1.3",
    "discord.py==2.4.0",
    "Pillow==11.1.0",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.0",
    "typing-extensions==4.14.0",
    "cachetools>=6.2.1",
    "cachetools-async>=0.0.5"
]

website = [
    { include-group = "statalib" },
    "paypal-server-sdk==1.1.0",
    "Pillow==11.1.0",
    "python-dotenv==1.0.0",
    "quart>=0.18.3",
    "quartcord>=1.0.1",
    "redis==6.4.0",
    "Werkzeug==2.3.8",
    "pydantic>=2.11.10",
    "aiofiles==25.1.0",
]

utils = [
    { include-group = "statalib" },
    "discord.py==2.4.0",
    "matplotlib==3.6.2",
    "python-dotenv==1.0.0"
]

all = [
    { include-group = "statalib" },
    { include-group = "bot" },
    { include-group = "website" },
    { include-group = "utils" }
]


[tool.uv.workspace]
members = [
    "apps/utils",
    "apps/website",
    "apps/bot",
]

[tool.pyright]
reportMissingTypeStubs = false

