[project]
name = "statalytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

[dependency-groups]
statalib = [
    "aiohttp-client-cache==0.8.2",
    "aiosqlite==0.19.0",
    "aiohttp>=3.13.3",
    "colorlog==6.7.0",
    "numpy==1.24.1",
    "Pillow>=12.1.1",
    "python-dateutil==2.8.2",
    "mcfetch==2.1.4",
    "urllib3>=2.6.3",  # Used in mcfetch
    "typing-extensions==4.14.0",
    "redis==6.4.0",
    "cachetools>=6.2.1",
    "cachetools-async>=0.0.5"
]

bot = [
    { include-group = "statalib" },
    "mcfetch==2.1.4",
    "discord.py==2.4.0",
    "Pillow>=12.1.1",
    "python-dateutil==2.8.2",
    "python-dotenv==1.2.2",
    "typing-extensions==4.14.0",
    "cachetools>=6.2.1",
    "cachetools-async>=0.0.5"
]

website = [
    { include-group = "statalib" },
    "paypal-server-sdk==1.1.0",
    "Pillow>=12.1.1",
    "python-dotenv==1.2.2",
    "quart>=0.20.0",
    "quartcord>=1.0.1",
    "pyjwt>=2.12.0",  # Used by quartcord
    "redis==6.4.0",
    "Werkzeug==3.1.6",
    "pydantic>=2.11.4",
    "aiofiles==25.1.0",
]

utils = [
    { include-group = "statalib" },
    "discord.py==2.4.0",
    "matplotlib==3.6.2",
    "python-dotenv==1.2.2"
]

tests = [
    { include-group = "statalib" },
    "python-dotenv==1.2.2",
]

all = [
    { include-group = "statalib" },
    { include-group = "bot" },
    { include-group = "website" },
    { include-group = "utils" }
]


[tool.uv.workspace]
members = [
    "apps/utils",
    "apps/website",
    "apps/bot",
]

[tool.pyright]
reportMissingTypeStubs = false

