[project]
name = "statalytics-service-trackers"
version = "2.0.0"
description = "Statalytics rotational stats resetting service"
authors = [
    {name = "Luciism"}
]
package-mode = false
requires-python = "^3.11"
dependencies = [
    "discord-py (==2.2.3)",
    "python-dotenv (==1.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
